4/22 insert_sort finish

--- a/templates/InsertSortPage.html
+++ b/templates/InsertSortPage.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>折半查找</title>
-    <link rel="stylesheet" href="../static/css/bisearchpage.css">
+    <title>直接插入排序</title>
+    <link rel="stylesheet" href="../static/css/insertsortpage.css">
     <link rel="stylesheet" href="../static/css/navigation.css">
     <link rel="stylesheet" type="text/css" href="http://cdn.bootcss.com/font-awesome/4.6.0/css/font-awesome.min.css">
 </head>
@@ -138,13 +138,12 @@
             <div id="input_page">
                 <div id="custom_tool">
                     <span>创建 :</span>
-                    <input type="text" placeholder="数组(升序)" class="inputs" id="user_data" value="">
+                    <input type="text" placeholder="数组" class="inputs" id="user_data" value="">
                     <button class="button" id="submit_bt">创建</button>
                     <button class="button" id="random_bt">随机</button>
                     <br>
-                    <span>查找 :</span>
-                    <input type="text" placeholder="值" class="inputs" id="search_num" value="">
-                    <button class="button" id="search_bt">查找</button>
+                    <span>插入排序 :</span>
+                    <button class="button" id="sort_bt">排序</button>
                     <br>
                 </div>
             </div>
@@ -174,6 +173,6 @@
 <script type="text/javascript" src="../static/lib/d3/d3.js"></script>
 <script type="text/javascript" src="../static/lib/jquery/jquery-3.1.1.min.js"></script>
 <script type="text/javascript" src="../static/js/TOOL.js"></script>
-<script type="text/javascript" src="../static/js/bisearchpage.js"></script>
+<script type="text/javascript" src="../static/js/insertsortpage.js"></script>
 <script type="text/javascript" src="../static/js/navigation.js"></script>
 </html>
