--- a/templates/ArrayPage.html
+++ b/templates/ArrayPage.html
@@ -99,53 +99,25 @@
                         <i class="fa fa-caret-right fr"></i>
                     </div>
                     <ul class="d-firstDrop s-firstDrop">
-                        <li>
-                            <div class="d-secondNav s-secondNav">
-                                <i class="fa fa-minus-square-o"></i>
-                                <span>插入排序</span>
-                                <i class="fa fa-caret-right fr "></i>
-                            </div>
-                            <ul class="d-secondDrop s-secondDrop">
-                                <li class="s-thirdItem">
-                                    <a href="#">三级导航</a>
-                                </li>
-                            </ul>
+                        <li class="s-secondItem">
+                            <i class="fa fa-minus-square-o"></i>
+                            <a href="/insert_sort_page">插入排序</a>
                         </li>
-                        <li>
-                            <div class="d-secondNav s-secondNav">
-                                <i class="fa fa-minus-square-o"></i>
-                                <span>交换排序</span>
-                                <i class="fa fa-caret-right fr "></i>
-                            </div>
-                            <ul class="d-secondDrop s-secondDrop">
-                                <li class="s-thirdItem">
-                                    <a href="#">三级导航</a>
-                                </li>
-                            </ul>
+                        <li class="s-secondItem">
+                            <i class="fa fa-minus-square-o"></i>
+                            <a href="#">冒泡排序</a>
                         </li>
-                        <li>
-                            <div class="d-secondNav s-secondNav">
-                                <i class="fa fa-minus-square-o"></i>
-                                <span>选择排序</span>
-                                <i class="fa fa-caret-right fr "></i>
-                            </div>
-                            <ul class="d-secondDrop s-secondDrop">
-                                <li class="s-thirdItem">
-                                    <a href="#">三级导航</a>
-                                </li>
-                            </ul>
+                        <li class="s-secondItem">
+                            <i class="fa fa-minus-square-o"></i>
+                            <a href="#">快速排序</a>
                         </li>
-                        <li>
-                            <div class="d-secondNav s-secondNav">
-                                <i class="fa fa-minus-square-o"></i>
-                                <span>归并排序</span>
-                                <i class="fa fa-caret-right fr "></i>
-                            </div>
-                            <ul class="d-secondDrop s-secondDrop">
-                                <li class="s-thirdItem">
-                                    <a href="#">三级导航</a>
-                                </li>
-                            </ul>
+                        <li class="s-secondItem">
+                            <i class="fa fa-minus-square-o"></i>
+                            <a href="#">直接选择排序</a>
+                        </li>
+                        <li class="s-secondItem">
+                            <i class="fa fa-minus-square-o"></i>
+                            <a href="#">堆排序</a>
                         </li>
                     </ul>
                 </li>
@@ -154,14 +126,17 @@
     </div>
     <div id="bottom_toolbar">
         <!--顶部功能栏-->
-        <div id= "play_bt" class = "play"></div>{#播放暂停#}
-        <div id="next_bt"></div> {#步进#}
-        <div id="progress"></div> {#进度条#}
+        <div id="play_bt" class="play"></div>
+        {#播放暂停#}
+        <div id="next_bt"></div>
+        {#步进#}
+        <div id="progress"></div>
+        {#进度条#}
     </div>
     <div id="top_toolbar"></div>
     <div id="screen">
         <div id="input_window">
-             {#输入窗口#}
+            {#输入窗口#}
             <div id="input_page">
                 <div id="custom_tool">
                     <span>数组 :</span>
@@ -181,21 +156,21 @@
             </div>
             <div id="hide_page">
                 {#隐藏按钮#}
-                <div id="hide_bt1" class = "hide_right"></div>
+                <div id="hide_bt1" class="hide_right"></div>
             </div>
         </div>
         <div id="hint_page">
             {#解释窗口#}
             <div id="hint_window"></div>
             <div id="hint_hide">
-                <div id="hide_bt2" class = "hide_right"></div>
+                <div id="hide_bt2" class="hide_right"></div>
             </div>
         </div>
         <div id="code_page">
-             {#伪代码窗口#}
+            {#伪代码窗口#}
             <div id="code_window"></div>
             <div id="code_hide">
-                <div id="hide_bt3" class = "hide_right"></div>
+                <div id="hide_bt3" class="hide_right"></div>
             </div>
         </div>
     </div>
