--- a/templates/StackPage.html
+++ b/templates/StackPage.html
@@ -99,53 +99,25 @@
                         <i class="fa fa-caret-right fr"></i>
                     </div>
                     <ul class="d-firstDrop s-firstDrop">
-                        <li>
-                            <div class="d-secondNav s-secondNav">
-                                <i class="fa fa-minus-square-o"></i>
-                                <span>插入排序</span>
-                                <i class="fa fa-caret-right fr "></i>
-                            </div>
-                            <ul class="d-secondDrop s-secondDrop">
-                                <li class="s-thirdItem">
-                                    <a href="#">三级导航</a>
-                                </li>
-                            </ul>
+                        <li class="s-secondItem">
+                            <i class="fa fa-minus-square-o"></i>
+                            <a href="/insert_sort_page">插入排序</a>
                         </li>
-                        <li>
-                            <div class="d-secondNav s-secondNav">
-                                <i class="fa fa-minus-square-o"></i>
-                                <span>交换排序</span>
-                                <i class="fa fa-caret-right fr "></i>
-                            </div>
-                            <ul class="d-secondDrop s-secondDrop">
-                                <li class="s-thirdItem">
-                                    <a href="#">三级导航</a>
-                                </li>
-                            </ul>
+                        <li class="s-secondItem">
+                            <i class="fa fa-minus-square-o"></i>
+                            <a href="#">冒泡排序</a>
                         </li>
-                        <li>
-                            <div class="d-secondNav s-secondNav">
-                                <i class="fa fa-minus-square-o"></i>
-                                <span>选择排序</span>
-                                <i class="fa fa-caret-right fr "></i>
-                            </div>
-                            <ul class="d-secondDrop s-secondDrop">
-                                <li class="s-thirdItem">
-                                    <a href="#">三级导航</a>
-                                </li>
-                            </ul>
+                        <li class="s-secondItem">
+                            <i class="fa fa-minus-square-o"></i>
+                            <a href="#">快速排序</a>
                         </li>
-                        <li>
-                            <div class="d-secondNav s-secondNav">
-                                <i class="fa fa-minus-square-o"></i>
-                                <span>归并排序</span>
-                                <i class="fa fa-caret-right fr "></i>
-                            </div>
-                            <ul class="d-secondDrop s-secondDrop">
-                                <li class="s-thirdItem">
-                                    <a href="#">三级导航</a>
-                                </li>
-                            </ul>
+                        <li class="s-secondItem">
+                            <i class="fa fa-minus-square-o"></i>
+                            <a href="#">直接选择排序</a>
+                        </li>
+                        <li class="s-secondItem">
+                            <i class="fa fa-minus-square-o"></i>
+                            <a href="#">堆排序</a>
                         </li>
                     </ul>
                 </li>
