4/24 bubble_sort finish

--- a/templates/BisearchPage.html
+++ b/templates/BisearchPage.html
@@ -64,10 +64,10 @@
                             <i class="fa fa-minus-square-o"></i>
                             <a href="#">二叉树</a>
                         </li>
-                        <li class="s-secondItem">
-                            <i class="fa fa-minus-square-o"></i>
-                            <a href="#">图</a>
-                        </li>
+{#                        <li class="s-secondItem">#}
+{#                            <i class="fa fa-minus-square-o"></i>#}
+{#                            <a href="#">图</a>#}
+{#                        </li>#}
                     </ul>
                 </li>
                 <li class="first">
@@ -85,10 +85,10 @@
                             <i class="fa fa-minus-square-o"></i>
                             <a href="/hash_page">哈希表</a>
                         </li>
-                        <li class="s-secondItem">
-                            <i class="fa fa-minus-square-o"></i>
-                            <a href="#">二叉排序树</a>
-                        </li>
+{#                        <li class="s-secondItem">#}
+{#                            <i class="fa fa-minus-square-o"></i>#}
+{#                            <a href="#">二叉排序树</a>#}
+{#                        </li>#}
                     </ul>
                 </li>
                 <li class="first">
@@ -104,7 +104,7 @@
                         </li>
                         <li class="s-secondItem">
                             <i class="fa fa-minus-square-o"></i>
-                            <a href="#">冒泡排序</a>
+                            <a href="/bubble_sort_page">冒泡排序</a>
                         </li>
                         <li class="s-secondItem">
                             <i class="fa fa-minus-square-o"></i>
