4/25 selection_sort finish

--- a/templates/BubbleSortPage.html
+++ b/templates/BubbleSortPage.html
@@ -108,11 +108,11 @@
                         </li>
                         <li class="s-secondItem">
                             <i class="fa fa-minus-square-o"></i>
-                            <a href="#">快速排序</a>
+                            <a href="/selection_sort_page">直接选择排序</a>
                         </li>
                         <li class="s-secondItem">
                             <i class="fa fa-minus-square-o"></i>
-                            <a href="#">直接选择排序</a>
+                            <a href="#">快速排序</a>
                         </li>
                         <li class="s-secondItem">
                             <i class="fa fa-minus-square-o"></i>
@@ -142,7 +142,7 @@
                     <button class="button" id="submit_bt">创建</button>
                     <button class="button" id="random_bt">随机</button>
                     <br>
-                    <span>插入排序 :</span>
+                    <span>冒泡排序 :</span>
                     <button class="button" id="sort_bt">排序</button>
                     <br>
                 </div>
