--- a/templates/ArrayPage.html
+++ b/templates/ArrayPage.html
@@ -99,7 +99,7 @@
                         <i class="fa fa-caret-right fr"></i>
                     </div>
                     <ul class="d-firstDrop s-firstDrop">
-                        <li class="s-secondItem">
+                       <li class="s-secondItem">
                             <i class="fa fa-minus-square-o"></i>
                             <a href="/insert_sort_page">插入排序</a>
                         </li>
@@ -109,11 +109,11 @@
                         </li>
                         <li class="s-secondItem">
                             <i class="fa fa-minus-square-o"></i>
-                            <a href="#">快速排序</a>
+                            <a href="/selection_sort_page">直接选择排序</a>
                         </li>
                         <li class="s-secondItem">
                             <i class="fa fa-minus-square-o"></i>
-                            <a href="#">直接选择排序</a>
+                            <a href="#">快速排序</a>
                         </li>
                         <li class="s-secondItem">
                             <i class="fa fa-minus-square-o"></i>
