--- a/templates/HomePage.html
+++ b/templates/HomePage.html
@@ -104,17 +104,17 @@
                             <i class="fa fa-minus-square-o"></i>
                             <a href="/insert_sort_page">插入排序</a>
                         </li>
-                         <li class="s-secondItem">
+                        <li class="s-secondItem">
                             <i class="fa fa-minus-square-o"></i>
                             <a href="/bubble_sort_page">冒泡排序</a>
                         </li>
                         <li class="s-secondItem">
                             <i class="fa fa-minus-square-o"></i>
-                            <a href="#">快速排序</a>
+                            <a href="/selection_sort_page">直接选择排序</a>
                         </li>
                         <li class="s-secondItem">
                             <i class="fa fa-minus-square-o"></i>
-                            <a href="#">直接选择排序</a>
+                            <a href="#">快速排序</a>
                         </li>
                         <li class="s-secondItem">
                             <i class="fa fa-minus-square-o"></i>
