--- a/templates/StackPage.html
+++ b/templates/StackPage.html
@@ -109,11 +109,11 @@
                         </li>
                         <li class="s-secondItem">
                             <i class="fa fa-minus-square-o"></i>
-                            <a href="#">快速排序</a>
+                            <a href="/selection_sort_page">直接选择排序</a>
                         </li>
                         <li class="s-secondItem">
                             <i class="fa fa-minus-square-o"></i>
-                            <a href="#">直接选择排序</a>
+                            <a href="#">快速排序</a>
                         </li>
                         <li class="s-secondItem">
                             <i class="fa fa-minus-square-o"></i>
