--- a/templates/StackPage.html
+++ b/templates/StackPage.html
@@ -63,7 +63,7 @@
                     <ul class="d-firstDrop s-firstDrop">
                         <li class="s-secondItem">
                             <i class="fa fa-minus-square-o"></i>
-                            <a href="#">二叉树</a>
+                            <a href="/binary_tree_page">二叉树</a>
                         </li>
 {#                        <li class="s-secondItem">#}
 {#                            <i class="fa fa-minus-square-o"></i>#}
