--- a/templates/QueuePage.html
+++ b/templates/QueuePage.html
@@ -113,7 +113,7 @@
                         </li>
                         <li class="s-secondItem">
                             <i class="fa fa-minus-square-o"></i>
-                            <a href="#">快速排序</a>
+                            <a href="/quick_sort_page">快速排序</a>
                         </li>
                         <li class="s-secondItem">
                             <i class="fa fa-minus-square-o"></i>
