--- a/static/css/quicksortpage.css
+++ b/static/css/quicksortpage.css
@@ -158,10 +158,58 @@ html body {
     font-size: 5px;
 }
 
+/*介绍窗口*/
+#intro_page{
+    position: absolute;
+    top: 20%;
+    right: 0;
+    width: 23%;
+    height: 20%;
+
+}
+
+#intro_window{
+    position: absolute;
+    background: #596e79;
+    font-weight: bold;
+    font-family: "KaiTi", serif;
+    font-size: 15px;
+    left: 0;
+    top: 0;
+    width: 85%;
+    height: 100%;
+}
+
+#intro_hide {
+    position: absolute;
+    background-color: #404d54;
+    right: 0;
+    top: 0;
+    width: 15%;
+    height: 100%;
+}
+
+#hide_bt4 {
+    position: absolute;
+    width: 50%;
+    height: 15%;
+    top: 45%;
+    left: 25%;
+    background-size:100%;
+    background-repeat: no-repeat;
+}
+
+#hide_bt4:hover {
+    position: absolute;
+    width: 70%;
+    height: 20%;
+    top: 41%;
+    left: 15%;
+}
 /*提示窗口*/
 #hint_page {
     position: absolute;
-    bottom: 32%;
+    bottom: 42%;
     right: 0;
     width: 23%;
     height: 8%;
@@ -212,7 +260,7 @@ html body {
     bottom: 1%;
     right: 0;
     width: 23%;
-    height: 30%;
+    height: 40%;
 }
 
 #code_window {
