--- a/templates/BisearchPage.html
+++ b/templates/BisearchPage.html
@@ -153,6 +153,13 @@
                 <div id="hide_bt1" class = "hide_right"></div>
             </div>
         </div>
+        <div id="intro_page">
+            {#算法介绍#}
+            <div id="intro_window"></div>
+            <div id="intro_hide">
+                <div id="hide_bt4" class = "hide_right"></div>
+            </div>
+        </div>
         <div id="hint_page">
             {#解释窗口#}
             <div id="hint_window"></div>
