--- a/static/css/bubblesortpage.css
+++ b/static/css/bubblesortpage.css
@@ -157,7 +157,54 @@ html body {
     display: inline-block;
     font-size: 5px;
 }
+/*介绍窗口*/
+#intro_page{
+    position: absolute;
+    top: 20%;
+    right: 0;
+    width: 23%;
+    height: 15%;
 
+}
+
+#intro_window{
+    position: absolute;
+    background: #596e79;
+    font-weight: bold;
+    font-family: "KaiTi", serif;
+    font-size: 15px;
+    left: 0;
+    top: 0;
+    width: 85%;
+    height: 100%;
+}
+
+#intro_hide {
+    position: absolute;
+    background-color: #404d54;
+    right: 0;
+    top: 0;
+    width: 15%;
+    height: 100%;
+}
+
+#hide_bt4 {
+    position: absolute;
+    width: 50%;
+    height: 19%;
+    top: 40%;
+    left: 25%;
+    background-size:100%;
+    background-repeat: no-repeat;
+}
+
+#hide_bt4:hover {
+    position: absolute;
+    width: 70%;
+    height: 30%;
+    top: 35%;
+    left: 15%;
+}
 /*提示窗口*/
 #hint_page {
     position: absolute;
