--- a/templates/ArrayPage.html
+++ b/templates/ArrayPage.html
@@ -5,6 +5,7 @@
     <title>数组</title>
     <link rel="stylesheet" href="../static/css/arraypage.css">
     <link rel="stylesheet" href="../static/css/navigation.css">
+    <link rel="stylesheet" href="../static/css/searchtool.css">
     <link rel="stylesheet" type="text/css" href="http://cdn.bootcss.com/font-awesome/4.6.0/css/font-awesome.min.css">
 </head>
 
@@ -115,17 +116,17 @@
                             <i class="fa fa-minus-square-o"></i>
                             <a href="/quick_sort_page">快速排序</a>
                         </li>
-                        <li class="s-secondItem">
-                            <i class="fa fa-minus-square-o"></i>
-                            <a href="#">堆排序</a>
-                        </li>
+{#                        <li class="s-secondItem">#}
+{#                            <i class="fa fa-minus-square-o"></i>#}
+{#                            <a href="#">堆排序</a>#}
+{#                        </li>#}
                     </ul>
                 </li>
             </ul>
         </div>
     </div>
     <div id="bottom_toolbar">
-        <!--顶部功能栏-->
+        <!--底部功能栏-->
         <div id="play_bt" class="play"></div>
         {#播放暂停#}
         <div id="next_bt"></div>
@@ -133,7 +134,13 @@
         <div id="progress"></div>
         {#进度条#}
     </div>
-    <div id="top_toolbar"></div>
+    <div id="top_toolbar">
+        <!--顶部功能栏-->
+        <div class="container" id="ss_key">
+            <input type="text" placeholder="搜索..." class="search_input" id="search_input" value="">
+            <div class="search"></div>
+        </div>
+    </div>
     <div id="screen">
         <div id="input_window">
             {#输入窗口#}
