--- a/static/css/arraypage.css
+++ b/static/css/arraypage.css
@@ -3,11 +3,11 @@ html body {
     /*font-size: 16px;*/
     /*font-family: "微软雅黑", serif;*/
     color: #FFFFFF;
-    background-color: pink;
+    background-color: white;
 }
 
 #main {
-    background-color: pink;
+    background-color: white;
     position: fixed;
     top: 0;
     bottom: 0;
