--- a/templates/HomePage.html
+++ b/templates/HomePage.html
@@ -122,7 +122,34 @@
 {#                        </li>#}
                     </ul>
                 </li>
+                <li class="first">
+                    <div class="d-firstNav about">
+                        <a href="/about">
+                            <i class="fa fa-bars"></i>
+                            <span>关于</span>
+                        </a>
+                    </div>
+                </li>
             </ul>
+        </div>
+        <div class="creator">
+            <span>开发者信息：</span>
+            <br>
+            <span>博客:</span>
+            <br>
+            <a class="links" href="https://blog.csdn.net/Tron_future">
+                <span>https://blog.csdn.net/Tron_future</span>
+            </a>
+            <br>
+            <span>Github:</span>
+            <br>
+            <a class="links" href="https://github.com/Tron-G/AlgorithmVisual">
+                <span>https://github.com/Tron-G/AlgorithmVisual</span>
+            </a>
+            <br>
+            <span>邮箱:</span>
+            <br>
+            <span>1285771266@qq.com</span>
         </div>
     </div>
     {#  <div id="bottom_toolbar"></div>#}
@@ -174,14 +201,14 @@
                     </td>
                     <td>
                         <a href="/bisearch_page">
-                            <img class="m_img" src="../static/img/biTree.png">
+                            <img class="m_img" src="../static/img/half.gif">
                         </a>
                         <br>
                         折半查找
                     </td>
                     <td>
                         <a href="/hash_page">
-                            <img class="m_img" src="../static/img/biTree.png">
+                            <img class="m_img" src="../static/img/hash.gif">
                         </a>
                         <br>
                         哈希表
