--- a/templates/QueuePage.html
+++ b/templates/QueuePage.html
@@ -122,7 +122,34 @@
 {#                        </li>#}
                     </ul>
                 </li>
+                <li class="first">
+                    <div class="d-firstNav about">
+                        <a href="https://www.baidu.com/">
+                            <i class="fa fa-bars"></i>
+                            <span>关于</span>
+                        </a>
+                    </div>
+                </li>
             </ul>
+        </div>
+        <div class="creator">
+            <span>开发者信息：</span>
+            <br>
+            <span>博客:</span>
+            <br>
+            <a class="links" href="https://blog.csdn.net/Tron_future">
+                <span>https://blog.csdn.net/Tron_future</span>
+            </a>
+            <br>
+            <span>Github:</span>
+            <br>
+            <a class="links" href="https://github.com/Tron-G/AlgorithmVisual">
+                <span>https://github.com/Tron-G/AlgorithmVisual</span>
+            </a>
+            <br>
+            <span>邮箱:</span>
+            <br>
+            <span>1285771266@qq.com</span>
         </div>
     </div>
     <div id="bottom_toolbar">
@@ -143,6 +170,8 @@
             {#输入窗口#}
             <div id="input_page">
                 <div id="custom_tool">
+                    <span>输入窗口:</span>
+                    <br>
                     <span>队列 :</span>
                     <input type="text" placeholder="例：1,2,3,4,5" class="inputs" id="user_data" value="">
                     <button class="button" id="submit_bt">创建</button>
