--- a/templates/QueuePage.html
+++ b/templates/QueuePage.html
@@ -124,7 +124,7 @@
                 </li>
                 <li class="first">
                     <div class="d-firstNav about">
-                        <a href="https://www.baidu.com/">
+                        <a href="/about">
                             <i class="fa fa-bars"></i>
                             <span>关于</span>
                         </a>
