--- a/templates/About.html
+++ b/templates/About.html
@@ -5,8 +5,10 @@
     <title>关于</title>
 </head>
 <style>
-    body{
-        background:  url(../static/img/about.jpg) no-repeat;
+    body {
+        background-size: 100% 100%;
+        background: url(../static/img/about.jpg) no-repeat fixed;
+        margin: 0;
         font-size: 20px;
         color: #5c636e;
         font-family: "KaiTi", serif;
@@ -22,17 +24,24 @@
         line-height: 30px;
         text-align: center;
     }
+    b{
+        font-size: 30px;
+        color: #1d1919;
+    }
     #title{
         font-size: 40px;
+    }
+    .names{
+        color: #c70039;
     }
 </style>
 <body>
 <h1 id ="title">致谢：</h1>
-<p>感谢王松导师对我的倾力支持以及以下同学的热心帮助，没有你们的帮助这个项目很难及时完工，在此对你们表示衷心的感谢</p>
-<p>☆罗瑜</p>
-<p>☆戴昕男</p>
-<p>☆刘亮</p>
-<p>☆伍荣俊男</p>
+<p>感谢<b>王松</b>导师对我的倾力支持及以下同学的鼎力相助,本项目的计日程功你们至关重要,在此对你们表示衷心的感谢</p>
+<p class="names">❀罗瑜</p>
+<p class="names">❀戴昕男</p>
+<p class="names">❀刘亮</p>
+<p class="names">❀伍荣俊男</p>
 <p>另外，如果您在使用本系统的过程中发现任何的错误，请将截屏和错误描述信息发送至我的邮箱<br>（1285771266@qq.com），同时也欢迎向我提出改进意见，我会第一时间回复您的邮件，谢谢</p>
 </body>
 </html>
